hphp/test/zend/good/Zend/tests/traits/error_005.php.expectf

Fatal error: A cannot use abc - it is not a trait in %s/error_005.php on line 6
